--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -588,6 +588,10 @@
         "settings": {}
       },
       {
+        "type": "contact",
+        "settings": {}
+      },
+      {
         "type": "newsletter",
         "settings": {}
       },
