--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -445,7 +445,7 @@
         },
         {
           "type": "header",
-          "content": "Link 1",
+          "content": "Link 1"
         },
         {
           "type": "image_picker",
@@ -481,7 +481,7 @@
         },
         {
           "type": "header",
-          "content": "Link 2",
+          "content": "Link 2"
         },
         {
           "type": "image_picker",
@@ -517,7 +517,7 @@
         },
         {
           "type": "header",
-          "content": "Link 3",
+          "content": "Link 3"
         },
         {
           "type": "image_picker",
