--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -487,11 +487,6 @@
           "label": "Icon",
           "options": [
             {
-              "value": "picto-mobile",
-              "label": "Mobile",
-              "group": "Communication"
-            },
-            {
               "value": "picto-phone",
               "label": "Phone",
               "group": "Communication"
@@ -502,11 +497,6 @@
               "group": "Communication"
             },
             {
-              "value": "picto-send",
-              "label": "Send",
-              "group": "Communication"
-            },
-            {
               "value": "picto-email",
               "label": "Email",
               "group": "Communication"
@@ -514,6 +504,11 @@
             {
               "value": "whatsapp",
               "label": "Whatsapp",
+              "group": "Communication"
+            },
+            {
+              "value": "faq",
+              "label": "Faq",
               "group": "Communication"
             }
           ]
@@ -560,11 +555,6 @@
           "label": "Icon",
           "options": [
             {
-              "value": "picto-mobile",
-              "label": "Mobile",
-              "group": "Communication"
-            },
-            {
               "value": "picto-phone",
               "label": "Phone",
               "group": "Communication"
@@ -575,11 +565,6 @@
               "group": "Communication"
             },
             {
-              "value": "picto-send",
-              "label": "Send",
-              "group": "Communication"
-            },
-            {
               "value": "picto-email",
               "label": "Email",
               "group": "Communication"
@@ -587,6 +572,11 @@
             {
               "value": "whatsapp",
               "label": "Whatsapp",
+              "group": "Communication"
+            },
+            {
+              "value": "faq",
+              "label": "Faq",
               "group": "Communication"
             }
           ]
@@ -633,11 +623,6 @@
           "label": "Icon",
           "options": [
             {
-              "value": "picto-mobile",
-              "label": "Mobile",
-              "group": "Communication"
-            },
-            {
               "value": "picto-phone",
               "label": "Phone",
               "group": "Communication"
@@ -648,11 +633,6 @@
               "group": "Communication"
             },
             {
-              "value": "picto-send",
-              "label": "Send",
-              "group": "Communication"
-            },
-            {
               "value": "picto-email",
               "label": "Email",
               "group": "Communication"
@@ -660,6 +640,11 @@
             {
               "value": "whatsapp",
               "label": "Whatsapp",
+              "group": "Communication"
+            },
+            {
+              "value": "faq",
+              "label": "Faq",
               "group": "Communication"
             }
           ]
