--- a/assets/theme.css
+++ b/assets/theme.css
@@ -9449,7 +9449,7 @@ input:checked + .popover__choice-label::after,
   display: grid;
   grid-gap: 40px;
   gap: 40px;
-  grid-template-columns: 1fr 1fr;
+  /* grid-template-columns: 1fr 1fr; */
   justify-content: space-between;
 }
 
