--- a/sections/scroll-ticker.liquid
+++ b/sections/scroll-ticker.liquid
@@ -121,6 +121,11 @@
       "default": "rgba(0,0,0,0)"
     }
   ],
-  "presets": []
+  "presets": [
+    {
+      "name": "Scroll ticker",
+      "settings": {}
+    }
+  ]
 }
 {% endschema %}
