--- a/sections/announcement-bar.liquid
+++ b/sections/announcement-bar.liquid
@@ -152,7 +152,7 @@
                 </div>
                 <span class="separation-clock">:</span>
                 <div class="clock-number"><span id="hours"></span>
-                    <p class="clock-text">Heure</p>
+                    <p class="clock-text">Heures</p>
                 </div>
                 <span class="separation-clock">:</span>
                 <div class="clock-number"><span id="minutes"></span>
