Changes mobile header

--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -510,6 +510,74 @@ SEARCH DRAWER
       "default": "logo_left_navigation_inline"
     },
     {
+      "type": "header",
+      "content": "Mobile"
+    },
+    {
+      "type": "image_picker",
+      "id": "image_1",
+      "label": "Image 1",
+      "info": "560 x 420px .jpg recommended"
+    },
+    {
+      "type": "text",
+      "id": "image_1_heading",
+      "label": "Heading 1"
+    },
+    {
+      "type": "url",
+      "id": "image_1_link",
+      "label": "Link 1"
+    },
+    {
+      "type": "image_picker",
+      "id": "image_2",
+      "label": "Image 2",
+      "info": "560 x 420px .jpg recommended"
+    },
+    {
+      "type": "text",
+      "id": "image_2_heading",
+      "label": "Heading 2"
+    },
+    {
+      "type": "url",
+      "id": "image_2_link",
+      "label": "Link 2"
+    },
+    {
+      "type": "image_picker",
+      "id": "image_3",
+      "label": "Image 3",
+      "info": "560 x 420px .jpg recommended"
+    },
+    {
+      "type": "text",
+      "id": "image_3_heading",
+      "label": "Heading 3"
+    },
+    {
+      "type": "url",
+      "id": "image_3_link",
+      "label": "Link 3"
+    },
+    {
+      "type": "image_picker",
+      "id": "image_4",
+      "label": "Image 4",
+      "info": "560 x 420px .jpg recommended"
+    },
+    {
+      "type": "text",
+      "id": "image_4_heading",
+      "label": "Heading 4"
+    },
+    {
+      "type": "url",
+      "id": "image_4_link",
+      "label": "Link 4"
+    },
+    {
       "type": "checkbox",
       "id": "show_icons",
       "label": "Show icons",
