--- a/assets/theme.css
+++ b/assets/theme.css
@@ -8,36 +8,21 @@
   font-family: "crossten";
   src: url("crossten_book.woff") format("woff");
   font-weight: normal;
+  font-display: swap;
 }
 
 @font-face {
   font-family: "crossten";
   src: url("crossten_semibold.woff") format("woff");
   font-weight: 600;
-}
-
-@font-face {
-  font-family: "wulkan";
-  src: url("wulkan-display-regular.woff") format("woff");
-  font-weight: 400;
-}
-
-@font-face {
-  font-family: "HKGrotesk";
-  src: url("HKGrotesk-Regular.woff") format("woff");
-  font-weight: normal;
-}
-
-@font-face {
-  font-family: "HKGrotesk";
-  src: url("HKGrotesk-Bold.woff") format("woff");
-  font-weight: 600;
+  font-display: swap;
 }
 
 @font-face {
   font-family: "silk";
   src: url("Silk_Serif_Medium.woff") format("woff");
   font-weight: 400;
+  font-display: swap;
 }
 
 /* End of Font face made by FG */
