--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -95,7 +95,7 @@ NOTE TO DEVELOPERS: welcome to Focal theme! We hope that you will enjoy editing 
     <script src="{{ 'theme.js' | asset_url }}" defer></script>
     <script src="{{ 'custom.js' | asset_url }}" defer></script>
     <script src="{{ 'wishlist.js' | asset_url }}" defer></script>
-    <script src="{{ 'checkout-flickity.js' | asset_url }}"></script>
+    <script src="{{ 'checkout-flickity.js' | asset_url }}" defer></script>
 
     {{ content_for_header }}
   </head>
