--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -182,8 +182,8 @@ NOTE TO DEVELOPERS: welcome to Focal theme! We hope that you will enjoy editing 
       {%- section 'footer' -%}
     {%- endif -%}
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js" defer></script>
+    <script type="text/javascript" defer>
       var _learnq = _learnq || [];
       {% if customer %}
       _learnq.push(['identify', {
