--- a/sections/product-recommendations.liquid
+++ b/sections/product-recommendations.liquid
@@ -76,7 +76,7 @@
                   {%- assign smallest_image_aspect_ratio = smallest_image_aspect_ratio | at_least: product.featured_media.aspect_ratio -%}
 
                   {%- capture sizes_attribute -%}(max-width: 740px) 75vw, min({{ 100.0 | divided_by: 4 | ceil }}vw, {{ 1520.0 | divided_by: 4 | ceil }}px){%- endcapture -%}
-                  {%- unless product.tags contains "Archives" %}
+                  {%- unless product.tags contains "Archives" or product.tags contains "noreco" %}
                     {%- render 'product-item', product: product, sizes_attribute: sizes_attribute, reveal: settings.stagger_products_apparition -%}
                   {%- endunless -%}
                 {%- endfor -%}
